fix: dropdown alignment

--- a/client/src/components/card-button/dropdown/styles.css
+++ b/client/src/components/card-button/dropdown/styles.css
@@ -18,7 +18,7 @@
   background-color: #fff;
   border: none;
   display: flex;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
   width: 100%;
   height: 2.5rem;
